GNOME Bugzilla – Bug 731402
core: fix metrics of user-added routes
Last modified: 2014-06-10 13:17:20 UTC
Fallout from bug 729203, caught by Thomas running the RHEL7 QE tests.
Created attachment 278135 [details] [review] core: fix metrics of user-added routes Adding a route with a metric of 0 to an IP4 or IP6 setting used to implicitly mean "use the default metric for the device", but this got broken by 722c9034. Fix that.
This looks good to me
The patch looks good to me too.
pushed to master (cdd0928) and nm-0-9-10 (223a0dd)