core: fix metrics of user-added routes

Adding a route with a metric of 0 to an IP4 or IP6 setting used to
implicitly mean "use the default metric for the device", but this got
broken by 722c9034. Fix that.

https://bugzilla.gnome.org/show_bug.cgi?id=731402
(cherry picked from commit cdd09286d73919d64f0f9481821a6f5185f7876b)